monitor_and_observability/monitor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: kube-prometheus-stack
  annotations:
    cert-manager.io/cluster-issuer: "prometheus-clusterissuer"
spec:
  tls:
  - hosts:
    - prometheus.cheakautomate.online
    - grafana.cheakautomate.online
    secretName: prometheus-tls
  rules:
  - host: prometheus.cheakautomate.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
  - host: grafana.cheakautomate.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
